<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_esptouch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/apSsidLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/esptouch1_ssid_title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/apSsidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/apBssidLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:text="@string/esptouch1_bssid_title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/apBssidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/apPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/esptouch1_password_title"
        android:singleLine="true" />

    <EditText
        android:id="@+id/deviceCountEdit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/esptouch1_device_count_title"
        android:text="1" />

    <RadioGroup
        android:id="@+id/packageModeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/packageBroadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/esptouch1_package_broadcast" />

        <RadioButton
            android:id="@+id/packageMulticast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/esptouch1_package_multicast" />
    </RadioGroup>

    <TextView
        android:id="@+id/messageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:textColor="@android:color/holo_red_dark"/>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esptouch1_confirm"/>
</LinearLayout>